Closed Bug 1252737 Opened 9 years ago Closed 9 years ago

WebrtcMediaCodecVP8VideoEncoder::InitEncode is invalid function define

Categories

(Core :: WebRTC: Audio/Video, defect)

Unspecified
Android
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla47
Tracking Status
firefox47 --- fixed

People

(Reporter: m_kato, Assigned: m_kato)

References

Details

Attachments

(1 file)

3rd parameter type of VideoEncoder ::InitEncode (/media/webrtc/trunk/webrtc/video_encoder.h) is size_t, but WebrtcMediaCodecVP8VideoEncoder::InitEncode is uint32_t...
OS: Unspecified → Android
Component: WebRTC: Signaling → WebRTC: Audio/Video
Although 3rd parameter VideoEncodeer::InitEncode() is defiend as size_t, WebrtcIMXH264VideoCodec and WebrtcMediaCodecVP8VideoCodec uses uint32_t. This will cause build error for 64bit platform. Review commit: https://reviewboard.mozilla.org/r/37555/diff/#index_header See other reviews: https://reviewboard.mozilla.org/r/37555/
Attachment #8725530 - Flags: review?(rjesup)
Comment on attachment 8725530 [details] MozReview Request: Bug 1252737 - use size_t instead of uint32_t for InitEncode(). r?jesup https://reviewboard.mozilla.org/r/37555/#review34135 ::: media/webrtc/signaling/src/media-conduit/WebrtcMediaCodecVP8VideoCodec.h:38 (Diff revision 1) > - uint32_t maxPayloadSize) override; > + size_t maxPayloadSize) override; Good, but I'm surprised it didn't kick out due to "override" - what was it overriding, and why didn't the compiler decide that size_t and uint32_t didn't match (even on 32-bit)? However, perhaps not important; really a compiler issue.
Attachment #8725530 - Flags: review?(rjesup) → review+
https://reviewboard.mozilla.org/r/37555/#review34135 > Good, but I'm surprised it didn't kick out due to "override" - what was it overriding, and why didn't the compiler decide that size_t and uint32_t didn't match (even on 32-bit)? However, perhaps not important; really a compiler issue. The compiler only cares if the types actually differ on the platform in question. Same goes for warnings about printf format strings.
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla47
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: