Bug 1252737 - use size_t instead of uint32_t for InitEncode(). r=jesup

Although 3rd parameter VideoEncodeer::InitEncode() is defiend as size_t, WebrtcIMXH264VideoCodec and WebrtcMediaCodecVP8VideoCodec uses uint32_t.  This will cause build error for 64bit platform.

MozReview-Commit-ID: 20NgE5e7Cuz